# WebFramework

./: .gitignore  README.md  example.py  pyproject.toml
src/webframework/: __init__.py  application.py  injector.py  request.py  response.py  router.py  security.py  types.py
tests/: test_injector.py  test_router.py  test_security.py
