[project]
name = "webframework"
version = "0.1.0"
description = ""
authors = [
    {name = "ArtemKondratenko",email = "artem-osteo@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
pytest = "^8.4.1"
uvicorn = "^0.35.0"

